--- a/clase-02/style.css
+++ b/clase-02/style.css
@@ -42,3 +42,11 @@ identifican a un único elemento de nuestro HTML */
 #h3-a {
     color: green;
 }
+
+#box-model {
+    color: white;
+    border: 4px solid blue;
+    background-color: red;
+    padding: 15px;
+    margin: 50px
+}
