--- a/clase-03/style.css
+++ b/clase-03/style.css
@@ -10,17 +10,12 @@ h2 {
 
 .text-color {
     font-weight: 700;
-    color: black;
     background-color: purple
 }
 
 #subtitle {
     color: white;
     font-weight: 100;
-}
-
-.titulo-color {
-    color: blue
 }
 
 .titulo-rojo {
@@ -30,4 +25,22 @@ h2 {
 
 #cuarto-titulo {
     color: white
+}
+
+.color-titulo {
+    color: blue;
+}
+
+#contenedor-foto-de-perfil {
+    width: 50px;
+    height: 50px;
+    overflow: hidden;
+    border-radius: 50%;
+    margin-bottom: 20px;
+    box-shadow: 0px 10px 15px 7px rgba(0,0,0,0.1);
+}
+
+#foto-de-perfil {
+    width: 100%;
+    height: auto;
 }
