--- a/clase-04/resolucion-tarea-clase-anterior/style.css
+++ b/clase-04/resolucion-tarea-clase-anterior/style.css
@@ -79,6 +79,14 @@ button {
     width: 60%;
 }
 
+.ejemplo-box-sizing {
+    width: 300px;
+    height: 300px;
+    padding: 50px;
+    background-color: red;
+    box-sizing: border-box;
+}
+
 #hero-button-container {
     width: 35%;
     display: flex;
@@ -89,7 +97,6 @@ button {
 #cards-container {
     display: flex;
     justify-content: space-between;
-    flex-wrap: wrap;
 }
 
 .card {
@@ -106,4 +113,29 @@ button {
 
 .card-text-container {
     padding: 24px;
+}
+
+/* 
+Las clases que están a continuación no están en uso, pero son ejemplos 
+de cómo se pueden escribir las propiedades margin o padding de manera compacta 
+*/
+
+.clase-ejemplo-margin {
+    /* Escribir esto: */
+    margin: 10px 45px 15px 17px;
+    /* es equivalente a escribir esto: */
+    margin-top: 10px;
+    margin-right: 45px;
+    margin-bottom: 15px;
+    margin-left: 17px;
+}
+
+.clase-ejemplo-margin {
+    /* Escribir esto: */
+    margin: 10px 45px;
+    /* es equivalente a escribir esto: */
+    margin-top: 10px;
+    margin-right: 45px;
+    margin-bottom: 10px;
+    margin-left: 45px;
 }
